--- a/backend/wrangler.toml
+++ b/backend/wrangler.toml
@@ -9,8 +9,8 @@ crons = ["* * * * *"]
 
 [[d1_databases]]
 binding = "DB"
-database_name = "my-api"
-database_id = "17425ece-265c-4a21-a1c7-80ff8332ca90"
+database_name = "xugou-db"
+database_id = "500cc52f-515c-4396-8934-8e439baa4840"
 
 [version_metadata]
 binding = "CF_VERSION_METADATA"
